virtual-datacenter/fullset-udr-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "locationonprem": {
            "type": "string",
            "defaultValue": "westus2",
            "metadata": {
                "description": "Azure region for location on-prem"
            }
        },
        "locationhub": {
            "type": "string",
            "defaultValue": "westus2",
            "metadata": {
                "description": "Azure region"
            }
        },
        "locationspoke1": {
            "type": "string",
            "defaultValue": "westus2",
            "metadata": {
                "description": "Azure region spoke1"
            }
        },
        "locationspoke2": {
            "type": "string",
            "defaultValue": "westus2",
            "metadata": {
                "description": "Azure region spoke2"
            }
        },
        "locationspoke3": {
            "type": "string",
            "defaultValue": "westus2",
            "metadata": {
                "description": "Azure region spoke3"
            }
        },
        "vnetHubName": {
            "type": "string",
            "defaultValue": "hub",
            "metadata": {
                "description": "name for the Azure hub vnet"
            }
        },
        "vnetOnPrem": {
            "type": "string",
            "defaultValue": "onprem",
            "metadata": {
                "description": "name for the Azure vnet simulating the on-premises network"
            }
        },
        "vnetspoke1": {
            "type": "string",
            "defaultValue": "spoke1",
            "metadata": {
                "description": "name for the Azure spoke1 vnet"
            }
        },
        "vnetspoke2": {
            "type": "string",
            "defaultValue": "spoke2",
            "metadata": {
                "description": "name for the Azure spoke2 vnet"
            }
        },
        "vnetspoke3": {
            "type": "string",
            "defaultValue": "spoke3",
            "metadata": {
                "description": "name for the Azure spoke3 vnet"
            }
        }
    },
    "variables": {
        "hub": {
            "location": "[parameters('locationhub')]",
            "name": "[parameters('vnetHubName')]",
            "addressPrefix": "10.0.0.0/16",
            "TenantName": "Tenant",
            "TenantPrefix": "10.0.1.0/24",
            "AzureBastionSubnetName": "AzureBastionSubnet",
            "AzureBastionSubnetPrefix": "10.0.2.0/24",
            "AzureFirewallSubnetName": "AzureFirewallSubnet",
            "AzureFirewallSubnetPrefix": "10.0.3.0/24",
            "GatewaySubnetName": "GatewaySubnet",
            "GatewaySubnetPrefix": "10.0.4.0/24",
            "RouteServerSubnetName": "RouteServerSubnet",
            "RouteServerSubnetPrefix": "10.0.5.0/24"
        },
        "spoke1": {
            "location": "[parameters('locationspoke1')]",
            "name": "[parameters('vnetspoke1')]",
            "addressPrefix": "10.1.0.0/16",
            "TenantName": "Tenant",
            "TenantPrefix": "10.1.1.0/24",
            "AppGatewaySubnetName": "appGtwSubnet",
            "AppGatewaySubnetPrefix": "10.1.2.0/24"
        },
        "spoke2": {
            "location": "[parameters('locationspoke2')]",
            "name": "[parameters('vnetspoke2')]",
            "addressPrefix": "10.2.0.0/16",
            "TenantName": "Tenant",
            "TenantPrefix": "10.2.1.0/24",
            "subnetfeName": "fe-subnet",
            "subnetfePrefix": "10.2.2.0/24",
            "subnetpeName": "pe-subnet",
            "subnetpePrefix": "10.2.3.0/24"
        },
        "spoke3": {
            "location": "[parameters('locationspoke3')]",
            "name": "[parameters('vnetspoke3')]",
            "addressPrefix": "10.3.0.0/16",
            "TenantName": "Tenant",
            "TenantPrefix": "10.3.1.0/24",
            "AppGatewaySubnetName": "appGtwSubnet",
            "AppGatewaySubnetPrefix": "10.3.2.0/24",
            "subnetpeName": "pe-subnet",
            "subnetpePrefix": "10.3.3.0/24"
        },
        "onprem": {
            "location": "[parameters('locationonprem')]",
            "name": "[parameters('vnetOnPrem')]",
            "addressPrefix": "10.10.0.0/16",
            "TenantName": "Tenant",
            "TenantPrefix": "10.10.1.0/24",
            "GatewaySubnetName": "GatewaySubnet",
            "GatewaySubnetPrefix": "10.10.3.0/24"
        },
        "azfwIP": "10.0.3.4",
        "natGatewayName": "[concat(variables('hub').name,'-natGw')]",
        "RT-hub-Tenant": "[concat('RT-',variables('hub').name, '-', variables('hub').TenantName)]",
        "RT-hub-GatewaySubnet": "[concat('RT-',variables('hub').name, '-', variables('hub').GatewaySubnetName)]",
        "nsgHubName": "[concat(variables('hub').name,'-nsg')]",
        "RT-spoke1-Tenant": "[concat('RT-',variables('spoke1').name,'-', variables('spoke1').TenantName)]",
        "nsgSpoke1Name": "[concat(variables('spoke1').name,'-nsg')]",
        "RT-Spoke2": "[concat('RT-',variables('spoke2').name,'-',variables('spoke2').TenantName)]",
        "nsgSpoke2Name": "[concat(variables('spoke2').name,'-nsg')]",
        "RT-spoke3-Tenant": "[concat('RT-',variables('spoke3').name,'-', variables('spoke3').TenantName)]",
        "nsgSpoke3Name": "[concat(variables('spoke3').name,'-nsg')]",
        "nsgonprem": "[concat(variables('onprem').name,'-nsg')]"
    },
    "resources": [

        {
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('RT-hub-Tenant')]",
            "apiVersion": "2022-05-01",
            "location": "[variables('hub').location]",
            "comments": "Routing Table hub",
            "dependsOn": [],
            "properties": {
                "routes": [
                    {
                        "name": "[concat('to-',variables('spoke1').name)]",
                        "properties": {
                            "addressPrefix": "[variables('spoke1').addressPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('spoke2').name)]",
                        "properties": {
                            "addressPrefix": "[variables('spoke2').addressPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('spoke3').name)]",
                        "properties": {
                            "addressPrefix": "[variables('spoke3').addressPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('onprem').name)]",
                        "properties": {
                            "addressPrefix": "[variables('onprem').addressPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('RT-spoke1-Tenant')]",
            "apiVersion": "2022-05-01",
            "location": "[variables('spoke1').location]",
            "comments": "Routing Table Spoke1",
            "dependsOn": [],
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "to-10network",
                        "properties": {
                            "addressPrefix": "10.0.0.0/8",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "to-internet",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('hub').name,'-',variables('hub').TenantName)]",
                        "properties": {
                            "addressPrefix": "[variables('hub').TenantPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('RT-Spoke2')]",
            "apiVersion": "2022-05-01",
            "location": "[variables('spoke2').location]",
            "comments": "Routing Table Spoke1",
            "dependsOn": [],
            "properties": {
                "disableBgpRoutePropagation": true,
                "routes": [
                    {
                        "name": "to-10network",
                        "properties": {
                            "addressPrefix": "10.0.0.0/8",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "to-internet",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('hub').name,'-',variables('hub').TenantName)]",
                        "properties": {
                            "addressPrefix": "[variables('hub').TenantPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "name": "[variables('RT-spoke3-Tenant')]",
            "apiVersion": "2022-05-01",
            "location": "[variables('spoke3').location]",
            "comments": "Routing Table Spoke1",
            "dependsOn": [],
            "properties": {
                "routes": [
                    {
                        "name": "to-10network",
                        "properties": {
                            "addressPrefix": "10.0.0.0/8",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "to-internet",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    },
                    {
                        "name": "[concat('to-',variables('hub').name,'-',variables('hub').TenantName)]",
                        "properties": {
                            "addressPrefix": "[variables('hub').TenantPrefix]",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('azfwIP')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-05-01",
            "name": "[variables('nsgHubName')]",
            "location": "[variables('hub').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-priv-10Network",
                        "properties": {
                            "description": "allow incoming 10.0.0.0/8",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-05-01",
            "name": "[variables('nsgSpoke1Name')]",
            "location": "[variables('spoke1').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-private-10",
                        "properties": {
                            "description": "allow incoming 10.0.0.0/8",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-05-01",
            "name": "[variables('nsgSpoke2Name')]",
            "location": "[variables('spoke2').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowRDP3389",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "3389",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTP80",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "80",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 400,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTPS443",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 500,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-private-10",
                        "properties": {
                            "description": "allow incoming 10.0.0.0/8",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 600,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2021-05-01",
            "name": "[variables('nsgSpoke3Name')]",
            "location": "[variables('spoke3').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-private-10",
                        "properties": {
                            "description": "allow incoming 10.0.0.0/8",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('hub').name]",
            "apiVersion": "2022-05-01",
            "location": "[variables('hub').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgHubName'))]",
                "[resourceId('Microsoft.Network/routeTables',variables('RT-hub-Tenant'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('hub').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('hub').TenantName]",
                        "properties": {
                            "addressPrefix": "[variables('hub').TenantPrefix]",
                            "natGateway": {
                                "id": "[resourceId('Microsoft.Network/natGateways', variables('natGatewayName'))]"
                            },
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgHubName'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables',variables('RT-hub-Tenant'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('hub').AzureBastionSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('hub').AzureBastionSubnetPrefix]"
                        }
                    },
                    {
                        "name": "[variables('hub').AzureFirewallSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('hub').AzureFirewallSubnetPrefix]"
                        }
                    },
                    {
                        "name": "[variables('hub').GatewaySubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('hub').GatewaySubnetPrefix]",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables',variables('RT-hub-GatewaySubnet'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('hub').RouteServerSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('hub').RouteServerSubnetPrefix]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('spoke1').name]",
            "apiVersion": "2021-05-01",
            "location": "[variables('spoke1').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables',variables('RT-spoke1-Tenant'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgspoke1Name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('spoke1').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('spoke1').TenantName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke1').TenantPrefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgSpoke1Name'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables',variables('RT-spoke1-Tenant'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('spoke1').AppGatewaySubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke1').AppGatewaySubnetPrefix]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('spoke2').name]",
            "apiVersion": "2022-05-01",
            "location": "[variables('spoke2').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables',variables('RT-Spoke2'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSpoke2Name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('spoke2').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('spoke2').TenantName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke2').TenantPrefix]",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables',variables('RT-Spoke2'))]"
                            },
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgSpoke2Name'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('spoke2').subnetfeName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke2').subnetfePrefix]"
                        }
                    },
                    {
                        "name": "[variables('spoke2').subnetpeName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke2').subnetpePrefix]",
                            "privateEndpointNetworkPolicies": "Disabled"
                        }
                    }
                ]
            }
        },


        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('spoke3').name]",
            "apiVersion": "2021-05-01",
            "location": "[variables('spoke3').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgSpoke3Name'))]",
                "[resourceId('Microsoft.Network/routeTables',variables('RT-spoke3-Tenant'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('spoke3').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('spoke3').TenantName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke3').TenantPrefix]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgSpoke3Name'))]"
                            },
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables',variables('RT-spoke3-Tenant'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('spoke3').AppGatewaySubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke3').AppGatewaySubnetPrefix]"
                        }
                    },
                    {
                        "name": "[variables('spoke3').subnetpeName]",
                        "properties": {
                            "addressPrefix": "[variables('spoke3').subnetpePrefix]",
                            "privateEndpointNetworkPolicies": "Disabled"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-05-01",
            "name": "[variables('nsgonprem')]",
            "location": "[variables('onprem').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-priv-10Network",
                        "properties": {
                            "description": "allow incoming 10.0.0.0/8",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.0.0.0/8",
                            "destinationAddressPrefix": "10.0.0.0/8",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('onprem').name]",
            "apiVersion": "2022-05-01",
            "location": "[variables('onprem').location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgonprem'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('onprem').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('onprem').TenantName]",
                        "properties": {
                            "addressPrefix": "[variables('onprem').TenantPrefix]"
                        }
                    },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "[variables('onprem').GatewaySubnetPrefix]"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {}
}
